feat: 2797 rsa bootstrap followup (#2862)
Signed-off-by: berryware <231598+berryware@users.noreply.github.com>
Co-authored-by: Joseph S. <121976561+jsync-swirlds@users.noreply.github.com>